# robot_sim

./: CMakeLists.txt  README.md  package.xml
config/: whole_body_trajectory_controller.yaml
data/drchubo/: manifest.xml
data/drchubo_lower/: manifest.xml  model.sdf
launch/: drchubo_bringup.launch  drchubo_lower.launch  drchubo_test.launch
msg/: JointCommands.msg  robotState.msg
plugins/: CMakeLists.txt  drchuboPlugin.cpp  drchuboPlugin.h  worldSimPlugin.cpp  worldSimPlugin.h
src/: CMakeLists.txt
src/gains/: CMakeLists.txt  GainsTuningCmd.cpp  GainsTuningCmd.h  GainsTuningWidget.cpp  GainsTuningWidget.h  main.cpp
src/gains/ui/: gainsTuningInterface.ui
src/grasp/: CMakeLists.txt  GraspCmd.cpp  GraspCmd.h  GraspWidget.cpp  GraspWidget.h  main.cpp
src/grasp/ui/: graspInterface.ui
src/pubTest/: CMakeLists.txt  pubTest.cpp
worlds/: drchubo_lower.world  drchubo_test.world
